--- a/Learning Task 2/recipe.html
+++ b/Learning Task 2/recipe.html
@@ -7,13 +7,13 @@
     <h1> RECIPE </h1>
     <ul>
        <li><a href="index.html" >HOME</a></li>
-        <li><a href="Omelette.html">Learning Task 2</a></li>
-        <li><a href="BasicPasta.html">Learning Task 2</a></li>
-        <li><a href="EggFriedRice.html">Learning Task 2</a></li>
-        <li><a href="cocumbersalad.html">Learning Task 2</a></li>
-        <li><a href="Goatcheese.html.html">Learning Task 2</a></li>
-        <li><a href="Salmonintheoven.html">Learning Task 2</a></li>
-        <li><a href="CarbonaraAlFunghi.html">Learning Task 2</a></li>       
+        <li><a href="Omelette.html">Omelette</a></li>
+        <li><a href="BasicPasta.html">Basic Pasta</a></li>
+        <li><a href="EggFriedRice.html">Egg Fried Rice</a></li>
+        <li><a href="cocumbersalad.html">Cocumber Salad</a></li>
+        <li><a href="Goatcheese.html.html">Goat cheese/Beetroot saladÂ</a></li>
+        <li><a href="Salmonintheoven.html">Salmon in the Oven</a></li>
+        <li><a href="CarbonaraAlFunghi.html">Carbonara Al Funghi</a>a> </li>       
     </ul>
     </body>
 </html>
