--- a/Learning Task 2/recipe.html
+++ b/Learning Task 2/recipe.html
@@ -13,7 +13,7 @@
         <li><a href="cocumbersalad.html">Cocumber Salad</a></li>
         <li><a href="Goatcheese.html.html">Goat cheese/Beetroot saladÂ</a></li>
         <li><a href="Salmonintheoven.html">Salmon in the Oven</a></li>
-        <li><a href="CarbonaraAlFunghi.html">Carbonara Al Funghi</a>a> </li>       
+        <li><a href="CarbonaraAlFunghi.html">Carbonara Al Funghi</a> </li>       
     </ul>
     </body>
 </html>
